--- a/www/css/findCss/findLess.less
+++ b/www/css/findCss/findLess.less
@@ -11,9 +11,9 @@ body{
 
 main{
     &>div{
-        padding: 20px;
+        padding: 5.3vw;
         background-color: white;
-        margin-bottom: 6px;
+        margin-bottom: 1.6vw;
         position: relative;
         &>img{
             width: 100%;
@@ -21,46 +21,46 @@ main{
         &>div{
             position: absolute;
             top: 10%;
-            left: 40px;
+            left: 10.66vw;
             h1{
                 color: #333333;
-                font-size: 24px;
-                line-height: 30px;
+                font-size: 6.4vw;
+                line-height: 8vw;
                 letter-spacing: 2px;
                 font-family: PingFangSC-Regular!important;
             }
             p{
-                padding: 10px 0 ;
-                line-height: 18px;
+                padding: 2.66vw 0 ;
+                line-height: 4.8vw;
                 color: #666666;
-                font-size: 12px;
+                font-size: 3.2vw;
             }
             ul{
                 display: flex;
                 padding: 0;
-                height: 24px;
+                height: 6.4vw;
                 margin: 0;
                 li{
                     list-style: none;
-                    height: 24px;
+                    height: 6.4vw;
                     border: 1px solid white;
-                    margin-right: -4px;
+                    margin-right: -1.06vw;
                     overflow: hidden;
                     border-radius: 50%;
-                    width: 24px;
+                    width: 6.4vw;
                     img{
                         width: 100%;
                     }
                 }
             }
             div{
-                margin-top: 40px;
+                margin-top: 10.67vw;
                 font-family: PingFangSC-Regular!important;
                 border: 0.5px solid #333333;
-                font-size: 12px;
-                height: 22px;
+                font-size: 3.2vw;
+                height: 5.8vw;
                 border-radius: 2px;
-                padding: 0 10px;
+                padding: 0 2.66vw;
             }
         }
     }
