--- a/www/css/giftCSS/gift.less
+++ b/www/css/giftCSS/gift.less
@@ -60,7 +60,7 @@ nav{
             }
             
             ul{
-                width: 245vw;
+                width: 271vw;
                 display: flex;
                 padding: 0;
                 list-style: none;
@@ -179,7 +179,9 @@ nav{
                 display: flex;
                 justify-content: center;
                 margin-bottom: 5vw;
+                overflow: hidden;
                 p{
+                    width: 60%;
                     border: .02rem solid #333333;
                     line-height: 4.267vw;
                     height: 7.2vw;
@@ -188,13 +190,17 @@ nav{
                     font-weight: 600;
                 }
                 div{
+                    width: 40%;
                     height: 7.2vw;
                     background-color: #333333;
                     color: white;
                     line-height: 7.2vw;
-                    padding:0 5px;
+                    padding:0 1.3vw;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
                     img{
-                        margin-left: 3px;
+                        margin-left: 0.8vw;
                     }
                 }
 
