--- a/www/css/indexCss/indexLess.less
+++ b/www/css/indexCss/indexLess.less
@@ -71,11 +71,11 @@
          }
          .main-pics{
             overflow: hidden;
-            padding-top: 35px;
+            padding-top: 9.3vw;
             height: 36.7vw;
            .swiper-pagination-fraction{
                position: absolute;
-               top: -5px;
+               top: -1.33vw;
                text-align: right;
                padding-right: 20px;
                color: #9e9b9e;
@@ -99,7 +99,7 @@
                         position: relative;
                     }
                     &>div{
-                        
+                        position: relative;
                             width: 42.4vw;
                             height: 26.93vw;
                             overflow: hidden;
@@ -248,9 +248,10 @@
         &>div{
             width: 42.67vw;
             font-family: PingFangSC-Semibold, PingFang SC;
-            
+            margin-bottom: 6.13vw;
             img{
                 width: 100%;
+                
             }
             span{
                 color: rgba(51, 51, 51, 1);
@@ -260,6 +261,9 @@
                 line-height: 5.87vw;
                 text-overflow: ellipsis;
                 white-space: nowrap;
+                overflow: hidden;
+                display: inline-block;
+                width: 100%;
             }
             p{
                 color: rgba(51, 51, 51, 0.7);
@@ -298,5 +302,31 @@
  .swiper-container{
      img{
          width: 100%;
+     }
+ }
+
+ .time-item{
+     position: absolute;
+     right: 0;
+     width: 40vw;
+     display: flex;
+     justify-content: center;
+     background-color: #f6f4f5;
+     white-space: nowrap;
+     img{
+         width: 4.53vw !important;
+         height: 4.53vw !important;
+     }
+     &>span{
+        font-weight: 400 !important;
+        color: #353331 !important;
+        align-items: center;
+        font-size: 3.2vw !important;
+     }
+     &>strong{
+        font-weight: 400 !important;
+        color: #353331 !important;
+        align-items: center;
+        font-size: 3.2vw !important;
      }
  }
