--- a/views/header.html
+++ b/views/header.html
@@ -30,7 +30,7 @@
         }
         
         header>div {
-            width: 117.1vw;
+            width: 130.1vw;
             height: 100%;
             box-sizing: border-box;
         }
@@ -40,13 +40,14 @@
             padding: 0;
             margin: 0;
             height: 100%;
-            box-sizing: border-box;
         }
         
         header li {
             list-style: none;
-            box-sizing: border-box;
-            padding: 0 10px;
+            text-align: center;
+            box-sizing: content-box;
+            width: 18vw;
+            padding: 0 2vw;
             line-height: 6vh;
             color: #333333;
             font-size: 3.2vw;
