--- a/views/community-message.html
+++ b/views/community-message.html
@@ -1,5 +1,40 @@
 {{include './community-common.html'}}
 
+<style>
+    body{
+        height: 100%;
+    }
+    .no-result{
+        margin-top: 20%;
+        text-align: center;
+    }
+    .pic img{
+        width: 58px;
+    }
+    .text{
+        margin-top: 30px;
+        font-size: 13px;
+        font-weight: 400;
+        color:#C3C5C6 ;
+    }
+    .ad{
+        position: fixed;
+        right: 0;
+        bottom: 55px;
+    }
+    .ad img{
+        width: 16vw;
+    }
+</style>
+<div class="no-result">
+    <div class="pic">
+        <img src="https://oss.flowerplus.cn/oss_svg/2019-03-01/15514287179225.svg" alt="">
+    </div>
+    <p class="text">暂无消息</p>
+</div>
+<div class="ad">
+<img src="https://oss.flowerplus.cn/oss_png/2019-08-05/15649841367119.png!750" alt="">
+</div>
 <script>
     $('a').removeClass('active')
     $('a').eq(3).addClass('active')
