--- a/views/maintenance.html
+++ b/views/maintenance.html
@@ -29,11 +29,11 @@
     </ul>
 
     <div class="show_box">
-        <a href="" class="list"><img src="./imges/发现/养护/pic1.jpg" alt="" ></a>
-        <a href="" class="list"><img src="./imges/发现/养护/pic2.jpg" alt="" ></a>
-        <a href="" class="list"><img src="./imges/发现/养护/pic3.jpg" alt="" ></a>
-        <a href="" class="list"><img src="./imges/发现/养护/pic4.jpg" alt="" ></a>
-        <a href="" class="list"><img src="./imges/发现/养护/pic5.jpg" alt="" ></a>
+        <a href="/single_bouquet" class="list"><img src="./imges/发现/养护/pic1.jpg" alt="" ></a>
+        <a href="/mix" class="list"><img src="./imges/发现/养护/pic2.jpg" alt="" ></a>
+        <a href="/mini" class="list"><img src="./imges/发现/养护/pic3.jpg" alt="" ></a>
+        <a href="/gift_bouquet" class="list"><img src="./imges/发现/养护/pic4.jpg" alt="" ></a>
+        <a href="/green_planting" class="list"><img src="./imges/发现/养护/pic5.jpg" alt="" ></a>
   
     </div>
 
