--- a/views/community.html
+++ b/views/community.html
@@ -25,9 +25,9 @@
 
             <!-- 导航栏 -->
             <div class="nav-bar">
-                <a href="javascript:void(0)">关注</a>
-                <a href="javascript:void(0)">推荐</a>
-                <a href="javascript:void(0)" class="nav-active">最新</a>
+                <a href="javascript:void(0)" id="attention">关注</a>
+                <a href="javascript:void(0)" id="recommend">推荐</a>
+                <a href="javascript:void(0)" id="news" class="nav-active">最新</a>
             </div>
         </div>
     </header>
@@ -35,14 +35,42 @@
     <main>
         <div class="container">
             <div class="news">
-                {{each data.news item}}
-                <div class="cet"><img src="{{item.img}}" alt="">
-                    <p>{{item.msg}}</p>
-                    <p><img src="{{item.userPic}}" alt="">{{item.name}}</p>
-                </div>
-                {{/each}}
+                <ul class="left">
+                    {{each data.left item}}
+                    <li class="cet"><img src="{{item.img}}" alt="">
+                        <p class="msg">{{item.msg}}</p>
+                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img src="/imges/社区-首页/heart.png"> 0</span></p>
+                    </li>
+                    {{/each}}
+                </ul>
+                <ul class="right">
+                    {{each data.right item}}
+                    <li class="cet"><img src="{{item.img}}" alt="">
+                        <p class="msg">{{item.msg}}</p>
+                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span></p>
+                    </li>
+                    {{/each}}
+                </ul>
+
             </div>
-            <div class="recommend"></div>
+            <div class="recommend">
+                <ul class="left">
+                    {{each data.left item}}
+                    <li class="cet"><img src="{{item.img}}" alt="">
+                        <p class="msg">{{item.msg}}</p>
+                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img src="/imges/社区-首页/heart.png"> 0</span></p>
+                    </li>
+                    {{/each}}
+                </ul>
+                <ul class="right">
+                    {{each data.right item}}
+                    <li class="cet"><img src="{{item.img}}" alt="">
+                        <p class="msg">{{item.msg}}</p>
+                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span></p>
+                    </li>
+                    {{/each}}
+                </ul>
+            </div>
             <div class="attention"></div>
         </div>
 
@@ -74,8 +102,17 @@
             $('.top-show').prepend(str)
         })
 
-        $('.nav-bar').find('a').click(function() {
+        $('#news').click(function() {
             $(this).addClass('nav-active').siblings().removeClass()
+            $('.news').css('display', 'flex').siblings().css('display', 'none')
+        })
+        $('#attention').click(function() {
+            $(this).addClass('nav-active').siblings().removeClass()
+            $('.attention').css('display', 'block').siblings().css('display', 'none')
+        })
+        $('#recommend').click(function() {
+            $(this).addClass('nav-active').siblings().removeClass()
+            $('.recommend').css('display', 'flex').siblings().css('display', 'none')
         })
     </script>
 </body>
