--- a/views/fleshiness.html
+++ b/views/fleshiness.html
@@ -92,7 +92,7 @@
             })
 
             $(hot).each(function(index, item) {
-                var str = `<section class="detail toDetail" data-id="fleshiness/${item.name}">
+                var str = `<section class="detail toDetail" data-id="fleshiness/1-${index}">
                         <div><img src="${item.img}" alt=""></div>
                         <p>${item.name}</p>
                         <p><span>${item.price}</span><del>${item.oldPrice}</del><span>${item.sale}</span></p>
