--- a/views/community.html
+++ b/views/community.html
@@ -126,11 +126,10 @@
 
             var topp = $(document).scrollTop();
 
-
             if (topp > 90) {
-                $('.bar').slideUp()
+                $('header').slideUp()
             } else {
-                $('.bar').slideDown()
+                $('header').slideDown()
             }
 
         })
