--- a/views/fleshiness.html
+++ b/views/fleshiness.html
@@ -103,7 +103,7 @@
             })
 
             $('.toDetail').click(function() {
-                location.href = '/detailPage?id=' + $(this).data('id')
+                location.href = '/detailPage?id=index/1-4'
             })
 
             $('.search').click(function() {
