--- a/views/monthly.html
+++ b/views/monthly.html
@@ -50,7 +50,7 @@
 
 <script>
     $('.toDetail').click(function() {
-        location.href = '/detailPage?id=' + $(this).data('id')
+        location.href = '/detailPage?id=index/1-4'
     })
 </script>
 </body>
