养护二级页面

--- a/views/moreF.html
+++ b/views/moreF.html
@@ -36,8 +36,8 @@
         </p>
     </div>
     <script>
-            $('.toDetail').click(function(){
-        location.href='/detailPage?id='+$(this).data("id")
+    $('.toDetail').click(function(){
+        location.href='/detailPage?id=index/1-4'
     })
     </script>
 </body>
