--- a/views/home.html
+++ b/views/home.html
@@ -160,7 +160,7 @@
 
     });
     $('.toDetail').click(function(){
-        location.href='/detailPage?id='+$(this).data("id")
+        location.href='/detailPage?id=index/1-4'
     })
 </script>
 </body>
