--- a/views/single_bouquet.html
+++ b/views/single_bouquet.html
@@ -1,63 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="./jq-3.5.1.js"> -->
+    <script src="/bootstrap-3.3.7-dist/js/jquery-3.1.1.js"></script>
     <title>单品花束</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
-        .top{
+
+        .top {
             margin: 0;
             display: flex;
             justify-content: space-between;
         }
-        li{
+
+        li {
             list-style: none;
             width: 50%;
             text-align: center;
         }
-        a{
+
+        li a {
             text-decoration: none;
             color: #4A4A4A;
             height: 40px;
             line-height: 40px;
             display: inline-block;
-          
+
         }
-        .current{
+
+        .current {
             padding: 0 5px;
-              border-bottom: 2px solid #000;
+            border-bottom: 2px solid #000;
         }
-        main{
+
+        .show-box {
             padding: 10px 10px 0;
             flex-wrap: wrap;
             display: flex;
             justify-content: space-between;
             background-color: #F5F5F5;
         }
-        main a{
+
+        .show-box a {
             display: block;
             width: 48.6%;
             color: #4a4a4a;
             margin-bottom: 10px;
+            font-size: 100%;
+            height: 58.7vw;
+            background-color: #fff;
+            text-decoration: none;
 
+        }
+
+        .show-box a div {
+         
+            width: 100%;
+           
+            overflow: hidden;
+        }
+
+        .show-box a p {
+            text-align: center;
+            padding: 12px 0;
+            width: 100%;
+        }
+
+        .show-box a div img {
+            width: 100%;
+        }
+
+        .main2 {
+            display: none;
         }
     </style>
 </head>
+
 <body>
-        <!-- 花束-单品 -->
-        <ul class="top">
-            <li><a class="current">国产品种</a></li>
-            <li><a>进口品种</a></li>
-        </ul>
-        <main class="main1">
+    <!-- 花束-单品 -->
+    <ul class="top">
+        <li class="btn1"><a class="current">国产品种</a></li>
+        <li class="btn2"><a>进口品种</a></li>
+    </ul>
+    <main class="main1">
+        <div class="show-box">
+   {{each single.china item}}
+        <a href="">
+            <div><img src="{{item.img}}" alt=""></div>
+            <p>{{item.p}}</p>
+        </a>
+        {{/each}}
+        </div>
+     
+    </main>
+    <main class="main2">
+        <div class="show-box">
+             {{each single.else item}}
+        <a href="">
+            <div><img src="{{item.img}}" alt=""></div>
+            <p>{{item.p}}</p>
+        </a>
+        {{/each}}
+        </div>
+       
+    </main>
 
-        </main>
-        <main class="main2">
-
-        </main>
+    <script>
+        $('.btn1').click(function () {
+            $('.btn2').children().eq(0).removeClass('current')
+            $(this).children().eq(0).addClass('current')
+            $('.main2').css('display', 'none')
+            $('.main1').css('display', 'block')
+        })
+        $('.btn2').click(function () {
+            $('.btn1').children().eq(0).removeClass('current')
+            $(this).children().eq(0).addClass('current')
+            $('.main1').css('display', 'none')
+            $('.main2').css('display', 'block')
+        })
+    </script>
 </body>
+
 </html>
