--- a/views/community.html
+++ b/views/community.html
@@ -41,7 +41,7 @@
                     {{each data.left item}}
                     <li class="cet"><img src="{{item.img}}" alt="">
                         <p class="msg">{{item.msg}}</p>
-                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img src="/imges/社区-首页/heart.png"> 0</span></p>
+                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
                     </li>
                     {{/each}}
                 </ul>
@@ -49,7 +49,7 @@
                     {{each data.right item}}
                     <li class="cet"><img src="{{item.img}}" alt="">
                         <p class="msg">{{item.msg}}</p>
-                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img src="/imges/社区-首页/heart.png"> 0</span></p>
+                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
                     </li>
                     {{/each}}
                 </ul>
@@ -61,7 +61,7 @@
                     {{each data.right item}}
                     <li class="cet"><img src="{{item.img}}" alt="">
                         <p class="msg">{{item.msg}}</p>
-                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img src="/imges/社区-首页/heart.png"> 0</span></p>
+                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
                     </li>
                     {{/each}}
                 </ul>
@@ -69,7 +69,7 @@
                     {{each data.left item}}
                     <li class="cet"><img src="{{item.img}}" alt="">
                         <p class="msg">{{item.msg}}</p>
-                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img src="/imges/社区-首页/heart.png"> 0</span></p>
+                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
                     </li>
                     {{/each}}
                 </ul>
@@ -79,12 +79,24 @@
                 <ul class="show-card">
                     {{each data.attention item}}
                     <li>
+                        <p><img src="/imges/社区-首页/logo.jpg" alt=""><span>FLŌWERPLUS</span><span>Lv.1</span></p>
                         <img src="{{item.img}}" alt="">
                         <span>{{item.tip}}</span>
                         <p>{{item.msg}}</p>
-                        <p>{{item.time}}<span></span></p>
-                        <p>{{item.commit}}</p>
-                        <p>添加评论....</p>
+                        <p>{{item.time}}
+                            <span>
+                                <img class="star" src="/imges/社区-首页/star.png" alt="">
+                                <sup class="starNum" data-id="{{item.star}}">{{item.star}}</sup>
+                            </span>
+                            <span>
+                                <img class="like" src="/imges/社区-首页/like.png" alt="">
+                                <sup class="likeNum">{{item.like}}</sup>
+                            </span>
+                        </p>
+                        {{if item.commit}}
+                        <p class="commit">{{item.commit}}</p>
+                        {{/if}}
+                        <p class="addCommit">添加评论....</p>
                     </li>
                     {{/each}}
                 </ul>
@@ -131,6 +143,38 @@
         $('#recommend').click(function() {
             $(this).addClass('nav-active').siblings().removeClass()
             $('.recommend').css('display', 'flex').siblings().css('display', 'none')
+        })
+
+        var isChange = true
+        $('.star').click(function() {
+            if (isChange) {
+                $(this).attr('src', "/imges/社区-首页/star.svg")
+                $(this).next().text($(this).next().text() * 1 + 1)
+                isChange = !isChange
+                return isChange
+            } else {
+                $(this).attr('src', "/imges/社区-首页/star.png")
+                $(this).next().text($(this).next().text() * 1 - 1)
+                isChange = !isChange
+                return isChange
+            }
+
+        })
+
+        var isChange2 = true
+        $('.like').click(function() {
+            if (isChange2) {
+                $(this).attr('src', "/imges/社区-首页/like.svg")
+                $(this).next().text($(this).next().text() * 1 + 1)
+                isChange2 = !isChange2
+                return isChange2
+            } else {
+                $(this).attr('src', "/imges/社区-首页/like.png")
+                $(this).next().text($(this).next().text() * 1 - 1)
+                isChange2 = !isChange2
+                return isChange2
+            }
+
         })
 
         // $(window).scroll(function() {
