--- a/www/css/communityCSS/community.css
+++ b/www/css/communityCSS/community.css
@@ -250,14 +250,95 @@ input:-moz-placeholder {
 }
 
 .show-card {
+    margin-top: 2vh;
+    margin-bottom: 9vh;
     width: 100%;
 }
 
 .show-card li {
     width: 100%;
     background-color: white;
+    padding-bottom: 1vh;
+    margin-bottom: 2vh;
+    border-radius: 2vw;
 }
 
-.show-card li img {
+.show-card li>img {
     width: 100%;
+}
+
+.show-card li p:nth-of-type(1) {
+    line-height: 12vw;
+    padding: 2vw;
+    margin: 0;
+}
+
+.show-card li p:nth-of-type(1) img {
+    width: 12vw;
+    height: 12vw;
+    border-radius: 6vw;
+}
+
+.show-card li p:nth-of-type(1) span:nth-of-type(1) {
+    font-size: 4vw;
+    margin-left: 3vw;
+}
+
+.show-card li p:nth-of-type(1) span:nth-of-type(2) {
+    color: #F0A735;
+    font-size: 3.8vw;
+    margin-left: 3.5vw;
+}
+
+.show-card li>span {
+    display: inline-block;
+    background-color: #fdeeef;
+    color: #f25c62;
+    padding: 1vw 2vw;
+    font-size: 4vw;
+    margin-left: 3vw;
+    border-radius: 2vw;
+    margin-top: 2vh;
+    margin-bottom: 1.5vh;
+}
+
+.show-card li p:nth-of-type(2) {
+    padding: 0 2vw;
+    font-size: 4vw;
+    margin-bottom: 2vh;
+}
+
+.show-card li p:nth-of-type(3) {
+    padding: 0 2vw;
+    font-size: 4vw;
+    color: #c9c9c9;
+}
+
+.show-card li p:nth-of-type(3) span {
+    float: right;
+    display: inline-block;
+    padding: 0 3vw;
+}
+
+.show-card li p:nth-of-type(3) span sup {
+    margin-left: 1vw;
+    font-size: 3.5vw;
+    color: rgb(152, 152, 152);
+}
+
+.show-card li p:nth-of-type(3) span img {
+    width: 4vw;
+    height: 4vw;
+}
+
+.show-card li .commit {
+    margin: 0 2vw 1vh;
+    padding: 2vw;
+    border-radius: 1vw;
+    background-color: #F4F4F4;
+}
+
+.show-card li .addCommit {
+    padding: 2vw 2vw 0;
+    font-size: 4vw;
 }
